--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "isotope-fit-columns": "^1.1.4",
     "isotope-layout": "^3.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
